2007-08-22  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-platform.h (syx_strdup): added
	(strndup): renamed to syx_strndup and moved from syx-types.h
	(malloc, malloc0, calloc, free): moved from syx-types.h
	All calls have been updated
	
	* All mixed declarations and code changed to for strict ISO C
	
	* All comments changed to complain ANSI C
	
	* syx/syx-object.h (struct SyxObject): bit-fields were removed for -pedantic, the size didn't vary

	* syx/syx-utils.c: issue #15 (Krzysztof Kowalczyk)

	* Fixed issue #14 (kkowalczyk)

2007-08-21  Luca Bruno  <lethalman88@gmail.com>

	* examples/embedding/SConscript: fix use of -rdynamic

	* Applied patch of issue #13

	* syx/syx-signal.c: signal function to be optional

2007-08-20  Luca Bruno  <lethalman88@gmail.com>
	
	== Released 0.1.4 version ==

	* Missing documentation was covered for Doxygen

2007-08-19  Luca Bruno  <lethalman88@gmail.com>

	* src/main.c (_parse_args): an comand line option parser was created to replace getopt

	* examples/console/SConscript (target): added

	* examples/SConscript: added

	* examples/embedding/SConscript: added

	* syx.desktop: added

	* syx.sln: added for MSVC support

	* syx.vcproj: added for MSVC support

	* syx/syx-plugins.c (_syx_plugin_default_method): added
	(syx_plugins_init): do not create a static method on initialization because it's not being inserted in a GC root

2007-08-17  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/gtk.i: remove pango dependency temporarly

	* plugins/gtk/pango.i: removed temporarly

	* plugins/gtk/st/PangoAttrList.st: removed temporarly

	* plugins/gtk/SConscript: link to gdk-win32

2007-08-16  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/plugin-init.c (syx_plugin_initialize): parse all remaining st files
	(syx_g_closure_marshal): leave gdk threads before entering the smalltalk callback

	* plugins/gtk/st/GtkTools.st: added a textview for evaluating code

	* plugins/gtk/st/Gtk.st: added missing GTK+ classes
