@@ -30,6 +30,8 @@
 #include "syx-lexer.h"
 #include "syx-bytecode.h"
 
+SYX_BEGIN_DECLS
+
 typedef struct SyxParserScope SyxParserScope;
 struct SyxParserScope
 {
@@ -74,5 +76,7 @@ struct SyxParser
 EXPORT extern SyxParser *syx_parser_new (SyxLexer *lexer, SyxOop method, SyxOop klass);
 EXPORT extern void syx_parser_free (SyxParser *parser, syx_bool free_segment);
 EXPORT extern syx_bool syx_parser_parse (SyxParser *parser);
+
+SYX_END_DECLS
 
 #endif /* SYX_PARSER_H */
