@@ -25,8 +25,15 @@
 #ifndef SYX_UTILS_H
 #define SYX_UTILS_H
 
+#include "syx-platform.h"
 #include "syx-types.h"
 #include "syx-lexer.h"
+
+#ifdef HAVE_STDARG_H
+#include <stdarg.h>
+#endif
+
+SYX_BEGIN_DECLS
 
 extern EXPORT syx_bool syx_cold_parse (SyxLexer *lexer);
 extern EXPORT syx_bool syx_cold_file_in (syx_symbol filename);
@@ -39,7 +46,7 @@ extern EXPORT void syx_semaphore_wait (SyxOop semaphore);
 extern EXPORT SyxOop syx_send_unary_message (SyxOop parent_context, SyxOop receiver, syx_symbol selector);
 extern EXPORT SyxOop syx_send_binary_message (SyxOop parent_context, SyxOop receiver, syx_symbol selector, SyxOop argument);
 extern EXPORT SyxOop syx_send_message (SyxOop parent_context, SyxOop receiver, syx_symbol selector, syx_varsize num_args, ...);
-extern EXPORT SyxOop syx_send_messagev (SyxOop parent_context, SyxOop receiver, syx_symbol selector, SyxOop arguments);
+extern EXPORT SyxOop syx_vsend_message (SyxOop parent_context, SyxOop receiver, syx_symbol selector, syx_varsize num_args, va_list ap);
 
 extern EXPORT SyxOop syx_file_in_blocking (syx_symbol file);
 extern EXPORT SyxOop syx_do_it_blocking (syx_symbol code);
@@ -71,5 +78,7 @@ extern EXPORT syx_uint32 syx_find_first_non_whitespace (syx_symbol string);
 #define SYX_IFDEF_CHAR_T syx_char
 
 #endif /* UNICODE */
+
+SYX_END_DECLS
 
 #endif /* SYX_UTILS_H */
